Fix baseline alignment of day and time on the index list

--- a/static/index.css
+++ b/static/index.css
@@ -22,6 +22,7 @@ time {
 .postdate {
   color: gray;
   font-size: 1rem;
+  vertical-align: bottom;
 }
 
 /* Don’t display the day name multiple times for days that have multiple entries */
